# webhook-inspector

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: cleaner.yml  deploy.yml  lint-and-test.yml
docs/launch/: 2026-05-15-launch-plan.md
docs/plans/: 2026-05-11-v1-phase-a-local-development.md  2026-05-12-v1-phase-b-gcp-infrastructure.md  2026-05-12-v1-phase-c-cicd-domain-observability.md  2026-05-13-v2-custom-response-and-observability.md  2026-05-13-v2.5-ux-product-features.md
docs/specs/: 2026-05-11-webhook-inspector-design.md  2026-05-13-v2-custom-response-and-observability-design.md  2026-05-13-v2.5-ux-product-features-design.md  2026-05-15-v3-observability-runtime-design.md
docs/superpowers/plans/: 2026-05-15-migrate-to-fly-io.md  2026-05-15-phase-minus-1-brand-cleanup.md  2026-05-15-v3-phase0-prs.md
infra/fly/: .gitignore  README.md  db.fly.toml  ingestor.fly.toml  web.fly.toml
infra/terraform/: README.md  apis.tf  artifact_registry.tf  cloud_run_app.tf  cloud_run_cleaner.tf  cloud_run_domain_mapping.tf  cloud_run_ingestor.tf  cloud_run_migrator.tf  cloud_scheduler.tf  cloudsql.tf  gcs.tf  monitoring_alerts.tf  outputs.tf  service_accounts.tf  terraform.tfvars.example  variables.tf  versions.tf  wif.tf
infra/terraform-legacy/: README.md  backend.tf  cloud_run_app.tf  cloud_run_ingestor.tf  cloud_run_migrator.tf  gcs.tf  locals.tf  monitoring_dashboard.tf  secret_manager.tf  service_accounts.tf  terraform.tfvars  wif.tf
migrations/: env.py
migrations/versions/: 0002_7f4cc8bfe09b_custom_response.py  0003_5058fb3e1c3e_search_vector.py  19068e2673bf_initial_schema.py
scripts/: bootstrap_gcp.sh  build_and_push.sh  run_migration.sh  smoke_test_cloud.sh  wait-for-stack.sh
src/webhook_inspector/: config.py
src/webhook_inspector/application/services/: slug_validator.py
src/webhook_inspector/application/use_cases/: capture_request.py  create_endpoint.py  export_requests.py  list_requests.py
src/webhook_inspector/domain/: exceptions.py
src/webhook_inspector/domain/entities/: captured_request.py  endpoint.py
src/webhook_inspector/domain/ports/: blob_storage.py  endpoint_repository.py  metrics_collector.py  notifier.py  request_repository.py
src/webhook_inspector/domain/services/: token_generator.py
src/webhook_inspector/infrastructure/database/: models.py  session.py
src/webhook_inspector/infrastructure/notifications/: postgres_notifier.py
src/webhook_inspector/infrastructure/observability/: otel_metrics_collector.py
src/webhook_inspector/infrastructure/repositories/: endpoint_repository.py  request_repository.py
src/webhook_inspector/infrastructure/storage/: factory.py  gcs_blob_storage.py  local_blob_storage.py  s3_blob_storage.py
src/webhook_inspector/jobs/: cleaner.py  migrator.py
src/webhook_inspector/observability/: logging.py  metrics.py  tracing.py
src/webhook_inspector/web/app/: deps.py  main.py  sse.py  (+1 more)
tests/: conftest.py
tests/e2e/: test_smoke.py
tests/fakes/: metrics_collector.py
tests/integration/: test_cleaner.py  test_gcs_blob_storage.py  test_notify_commit_order.py  test_postgres_notifier.py
tests/integration/repositories/: test_endpoint_repository.py  test_request_repository.py
tests/integration/storage/: test_s3_blob_storage.py
tests/integration/web/: test_app_create_endpoint.py  test_app_create_endpoint_slug.py  test_app_export.py  test_app_list_requests.py  test_app_list_requests_search.py  test_copy_as_curl.py  test_health.py  test_healthz.py  test_ingestor_capture.py  test_landing.py  test_sse_stream.py  test_viewer_render.py
tests/unit/: test_blob_storage_factory.py  test_config.py
tests/unit/application/: test_capture_request.py  test_create_endpoint.py  test_export_requests.py  test_list_requests.py  test_slug_validator.py
tests/unit/domain/: test_captured_request.py  test_endpoint.py  test_endpoint_response_validation.py  test_token_generator.py
tests/unit/infrastructure/: test_local_blob_storage.py
tests/unit/observability/: test_logging.py  test_metrics.py  test_metrics_collector.py  test_tracing.py
tests/unit/storage/: test_factory.py
(+6 files in other folders)
