[project]
name = "webhook-inspector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stanislas Plum", email = "57526019+quaxsze@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "google-cloud-storage>=3.10.1",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "opentelemetry-distro>=0.62b1",
    "opentelemetry-exporter-gcp-monitoring>=1.12.0a0",
    "opentelemetry-exporter-gcp-trace>=1.12.0",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-instrumentation-psycopg>=0.62b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.62b1",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "sqlmodel>=0.0.38",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.46.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "testcontainers>=4.14.2",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["migrations/"]

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific (all)
    "C4",    # flake8-comprehensions
    "G",     # flake8-logging-format
    "T20",   # flake8-print
    "ASYNC", # flake8-async — killer for our asyncio-heavy code
    "DTZ",   # flake8-datetimez — datetime timezone safety
    "TID",   # flake8-tidy-imports
    "PT",    # flake8-pytest-style
    "BLE",   # flake8-blind-except
    "ARG",   # flake8-unused-arguments
    "PIE",   # flake8-pie
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM", "ARG", "S101", "PT004"]
"migrations/**" = ["ALL"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
exclude = ["migrations/"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["google.cloud.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/webhook_inspector"]
branch = true
parallel = true
omit = [
    "src/webhook_inspector/jobs/migrator.py",  # entry-point, side-effect-only
    "*/migrations/*",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
